--- a/test1.html
+++ b/test1.html
@@ -7,9 +7,8 @@
   <body>
     <h1>Hello World</h1>
     what the... Fxxxxx...
-<<<<<<< HEAD
     this is hell
-=======
->>>>>>> exp1
+    well
+    ...
   </body>
 </html>
