--- a/test1.html
+++ b/test1.html
@@ -6,12 +6,8 @@
   </head>
   <body>
     <h1>Hello World</h1>
-    what the... Fxxxxx...
-    this is hell
-    well
-<<<<<<< HEAD
-    ...
-=======
->>>>>>> exp1
+    <ul>
+      <li>gitHub</li>
+    </ul>
   </body>
 </html>
